header z-index fix

--- a/assignment_1/css/main.css
+++ b/assignment_1/css/main.css
@@ -26,7 +26,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 /* .header-inside {
   align-items: center;
